Added runes to structures

--- a/src/main/resources/data/minecraft/loot_tables/chests/egypt_treasure_chest_1.json
+++ b/src/main/resources/data/minecraft/loot_tables/chests/egypt_treasure_chest_1.json
@@ -6,6 +6,15 @@
       "entries": [
         {
           "type": "minecraft:item",
+          "name": "civilizations:anubis_rune"
+        }
+      ]
+    },
+    {
+      "rolls": 2,
+      "entries": [
+        {
+          "type": "minecraft:item",
           "name": "civilizations:papyrus"
         }
       ]
