--- a/src/main/resources/data/minecraft/loot_tables/chests/egypt_treasure_chest_2.json
+++ b/src/main/resources/data/minecraft/loot_tables/chests/egypt_treasure_chest_2.json
@@ -2,6 +2,15 @@
   "type": "minecraft:chest",
   "pools": [
     {
+      "rolls": 2,
+      "entries": [
+        {
+          "type": "minecraft:item",
+          "name": "civilizations:anubis_rune"
+        }
+      ]
+    },
+    {
       "rolls": 4,
       "entries": [
         {
